Bug 1143084: Set letter spacing for `.demo-title` to 0

--- a/media/stylus/components/demos/galleries.styl
+++ b/media/stylus/components/demos/galleries.styl
@@ -72,7 +72,7 @@
 }
 .demo .demo-title {
   font: normal 1.285em/1 $heading-font-family;
-  letter-spacing: 2px;
+  letter-spacing: 0;
   text-transform: uppercase;
   margin: 0 0 0.15em;
 }
